--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-table": "^8.16.0",
     "antd": "^5.16.1",
+    "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.10",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.368.0",
     "moment": "^2.30.1",
     "react": "^18.2.0",
