--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.3",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.22.3",
     "sass": "^1.75.0",
     "styled-components": "^6.1.8",
