--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.3",
     "react-router-dom": "^6.22.3",
+    "recharts": "^2.12.6",
     "sass": "^1.75.0",
     "styled-components": "^6.1.8",
     "tailwind-merge": "^2.3.0",
