--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-hook-form": "^7.51.3",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.22.3",
+    "react-select": "^5.8.0",
     "react-toastify": "^10.0.5",
     "recharts": "^2.12.6",
     "sass": "^1.75.0",
